# CodeCompass

./: Config.cmake
.gitlab/: build-deps.sh
doc/: ubuntu22.md
plugins/cpp_metrics/parser/include/cppmetricsparser/: cppmetricsparser.h
plugins/cpp_metrics/parser/src/: cppmetricsparser.cpp
plugins/python/model/include/model/: pythonfunction.h
plugins/python/parser/: CMakeLists.txt  requirements.txt
plugins/python/parser/include/pythonparser/: pythonparser.h
plugins/python/parser/pyparser/: pybuiltin.py
plugins/python/parser/src/: pythonparser.cpp
plugins/python/service/: CMakeLists.txt
plugins/python/service/include/service/: pythonservice.h
plugins/python/service/pyservice/: service.py
plugins/python/service/src/: plugin.cpp  pythonservice.cpp
plugins/python/test/: CMakeLists.txt
plugins/python/test/src/: pythonparsertest.cpp
webgui-new/src/components/codemirror-editor/: codemirror-editor.tsx
webgui-new/src/global-context/: app-context.tsx
webgui-new/src/service/: python-service.ts
